--- a/Reliable/Reliable.csproj
+++ b/Reliable/Reliable.csproj
@@ -8,12 +8,13 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Reliable</RootNamespace>
     <AssemblyName>Reliable</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
     <PublishUrl>Z:\Reliable Application\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -25,7 +26,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <UpdateUrl>\\RMPSRV02\Reliable Files\Reliable Application\</UpdateUrl>
-    <ApplicationRevision>72</ApplicationRevision>
+    <ApplicationRevision>76</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -293,6 +294,12 @@
     <Compile Include="CountSheets.Designer.cs">
       <DependentUpon>CountSheets.cs</DependentUpon>
     </Compile>
+    <Compile Include="APImport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="APImport.Designer.cs">
+      <DependentUpon>APImport.cs</DependentUpon>
+    </Compile>
     <Compile Include="EFTNotePad.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -444,6 +451,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CountSheets.resx">
       <DependentUpon>CountSheets.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="APImport.resx">
+      <DependentUpon>APImport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EFTNotePad.resx">
       <DependentUpon>EFTNotePad.cs</DependentUpon>
