--- a/Reliable/Reliable.csproj
+++ b/Reliable/Reliable.csproj
@@ -401,6 +401,12 @@
     <Compile Include="SalesToCustomer.Designer.cs">
       <DependentUpon>SalesToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="OrderDeskErrors.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OrderDeskErrors.Designer.cs">
+      <DependentUpon>OrderDeskErrors.cs</DependentUpon>
+    </Compile>
     <Compile Include="ShippingLabels.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -512,6 +518,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SalesToCustomer.resx">
       <DependentUpon>SalesToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OrderDeskErrors.resx">
+      <DependentUpon>OrderDeskErrors.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ShippingLabels.resx">
       <DependentUpon>ShippingLabels.cs</DependentUpon>
